--- a/Suggestbox.html
+++ b/Suggestbox.html
@@ -33,7 +33,7 @@
     <input type="submit" name="mesquestions" ><br>
   </form>
 <br><br><br>
-  <h1><a href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html">Home</a></h1>
+  <h1><a href="index.html">Home</a></h1>
 </body>
 
 </html>
