--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Découvrez-le dans les plaines célestes de Kunitsukami !</p>
   <hr size="3" noshade />
   <center>
-    <h3> <a target="_blank" href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/Supaakyoudaibun.html">Personnages Principaux</a> </h3>
+    <h3> <a target="_blank" href="Supaakyoudaibun.html">Personnages Principaux</a> </h3>
   </center>
   <br>
   <ul>
@@ -168,14 +168,14 @@
   </table>
 
   <center>
-    <h3><a target="_blank" href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/Personnage.html">Tous les personnages</a></h3>
+    <h3><a target="_blank" href="Personnage.html">Tous les personnages</a></h3>
   </center>
 
   <hr size="3" noshade>
   <br>
   <br>
   <center>
-    <a href="file:///C:/Users/ynsun/oneDrive/Bureau/Web%20dev/Html%20personal%20site/Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
+    <a href="Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
   </center>
 
   <br>
