--- a/Supaakyoudaibun.html
+++ b/Supaakyoudaibun.html
@@ -15,7 +15,7 @@
       </tr>
     </table>
     <center>
-      <h1><a href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html">Home</a></h1>
+      <h1><a href="index.html">Home</a></h1>
     </center>
   </body>
 </html>
