--- a/Personnage.html
+++ b/Personnage.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h2><a href="index.html">Home</a></h2>
+  <h2><a href="https://brookenword.github.io/Kunitsukami/index.html">Home</a></h2>
   <u><strong>🏮Fukashi no seishin (Les étoiles invisibles) 🏮</strong></u><br>
   <u>Organisation</u><br>
   <p>Urashima Odoyaka <em>ancien roi du palais du dragon, dragon des pouvoirs, gp de Kaiyo</em> <br>
@@ -198,7 +198,7 @@
   <p>Doku<br>
     Jun <em>Nindo</em><br>
     Kendo <em>kendo</em><br></p>
-<h2><a href="index.html">Home</a></h2>
+<h2><a href="https://brookenword.github.io/Kunitsukami/index.html">Home</a></h2>
 </body>
 
 </html>
