--- a/Supaakyoudaibun.html
+++ b/Supaakyoudaibun.html
@@ -15,7 +15,7 @@
       </tr>
     </table>
     <center>
-      <h1><a href="index.html">Home</a></h1>
+      <h1><a href="https://brookenword.github.io/Kunitsukami/index.html">Home</a></h1>
     </center>
   </body>
 </html>
