--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 
   <br>
   <br>
-  <img src="image/kitoun ranran.jpg" alt="kitoun ranran">
-  <img src="image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
-  <img src="image/Family pic.jpg" alt="onmoraki">
+  <img src="https://brookenword.github.io/Kunitsukami/image/kitoun ranran.jpg" alt="kitoun ranran">
+  <img src="https://brookenword.github.io/Kunitsukami/image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Family pic.jpg" alt="onmoraki">
   <center>
     <br>
     <br>
@@ -191,10 +191,10 @@
   </center>
   <br>
   <br>
-  <img src="image/Niten.jpg" alt="Takezo Shinmen ou Miyamoto Musashi">
-  <img src="image/Tsukehara.jpg" alt="Bokuden Tsukehara">
-  <img src="image/Gontrand.jpg" alt="Gontrand">
-  <img src="image/soma.jpg" alt="Soma Kumamoto">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Niten.jpg" alt="Takezo Shinmen ou Miyamoto Musashi">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Tsukehara.jpg" alt="Bokuden Tsukehara">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Gontrand.jpg" alt="Gontrand">
+  <img src="https://brookenword.github.io/Kunitsukami/image/soma.jpg" alt="Soma Kumamoto">
 </body>
 
 </html>
