--- a/Supaakyoudaibun.html
+++ b/Supaakyoudaibun.html
@@ -6,12 +6,12 @@
   <body>
     <table>
       <tr>
-        <td><a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img src="image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a></td>
-        <td><a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img src="image/shinken.jpg" alt="Dikembe Mbaka"></a></td>
+        <td><a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img src="https://brookenword.github.io/Kunitsukami/image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a></td>
+        <td><a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img src="https://brookenword.github.io/Kunitsukami/image/shinken.jpg" alt="Dikembe Mbaka"></a></td>
       </tr>
       <tr>
-        <td><a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img src="image/Senshi après la pause.jpg" alt="Senshi Nobue"></a></td>
-        <td><a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img src="image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a></td>
+        <td><a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img src="https://brookenword.github.io/Kunitsukami/image/Senshi après la pause.jpg" alt="Senshi Nobue"></a></td>
+        <td><a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img src="https://brookenword.github.io/Kunitsukami/image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a></td>
       </tr>
     </table>
     <center>
