--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
   <br>
   <br>
-  <img src="https://brookenword.github.io/Kunitsukami/image/kitoun ranran.jpg" alt="kitoun ranran">
-  <img src="https://brookenword.github.io/Kunitsukami/image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Kitoun Ranran.jpg" alt="kitoun ranran">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Kousei no Kumo no Shinrin.jpg" alt="kousei no kumo no shinrin">
   <img src="https://brookenword.github.io/Kunitsukami/image/Family pic.jpg" alt="onmoraki">
   <center>
     <br>
@@ -194,7 +194,7 @@
   <img src="https://brookenword.github.io/Kunitsukami/image/Niten.jpg" alt="Takezo Shinmen ou Miyamoto Musashi">
   <img src="https://brookenword.github.io/Kunitsukami/image/Tsukehara.jpg" alt="Bokuden Tsukehara">
   <img src="https://brookenword.github.io/Kunitsukami/image/Gontrand.jpg" alt="Gontrand">
-  <img src="https://brookenword.github.io/Kunitsukami/image/soma.jpg" alt="Soma Kumamoto">
+  <img src="https://brookenword.github.io/Kunitsukami/image/Soma.jpg" alt="Soma Kumamoto">
 </body>
 
 </html>
