Update for github 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <img class="banniere" src="C:image/bannière2.png" alt="SKB">
+    <img class="banniere" src="https://brookenword.github.io/Kunitsukami/image/bannière2.png" alt="SKB">
 <hr size="1" noshade />
   <br>
   <div class="intro">
@@ -24,10 +24,10 @@
     <div class="intro2">
       <table>
         <tr>
-          <td class="figure1" ><a target="_blank" href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/Supaakyoudaibun.html"> <img src="C:image/logo princ.png" alt="logo personnages principaux"> </td>
-          <td class="figure2"><a target="_blank" href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/Personnage.html"><img src="C:image/logo persos.png" alt="logo personnages"></a></td>
-          <td class="figure3"><a href="file:///C:/Users/ynsun/oneDrive/Bureau/Web%20dev/Html%20personal%20site/Suggestbox.html"> <img src="C:image/logo conta.png" alt="logo contact"> </a></td>
-          <td class="figure4"><a href="C:\Users\ynsun\OneDrive\Bureau\Web dev\Html personal site\index.html"> <img src="C:image/logo connex.png" alt="logo connexion"> </a></td>
+          <td class="figure1" ><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Supaakyoudaibun.html"> <img src="https://brookenword.github.io/Kunitsukami/logo princ.png" alt="logo personnages principaux"> </td>
+          <td class="figure2"><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Personnage.html"><img src="https://brookenword.github.io/Kunitsukami/image/logo persos.png" alt="logo personnages"></a></td>
+          <td class="figure3"><a href="https://brookenword.github.io/Kunitsukami/Suggestbox.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo conta.png" alt="logo contact"> </a></td>
+          <td class="figure4"><a href="https://brookenword.github.io/Kunitsukami/index.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo connex.png" alt="logo connexion"> </a></td>
         </tr>
       </table>
     </div>
@@ -155,12 +155,12 @@
     <br>
     <br>
     <div>
-      <img class="imagerie" src="C:image/kitoun ranran.jpg" alt="kitoun ranran">
-      <img class="imagerie" src="C:image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
-      <img class="imagerie" src="C:image/Family pic.jpg" alt="onmoraki">
+      <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/kitoun ranran.jpg" alt="kitoun ranran">
+      <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
+      <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/Family pic.jpg" alt="onmoraki">
     </div>
 
-      <a href="file:///C:/Users/ynsun/oneDrive/Bureau/Web%20dev/Html%20personal%20site/Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
+      <a href="https://brookenword.github.io/Kunitsukami/Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
 </body>
 
 </html>
