--- a/Supaakyoudaibun.html
+++ b/Supaakyoudaibun.html
@@ -5,19 +5,20 @@
   <meta charset="utf-8">
   <title>Supaakyoudaibun</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <table  >
     <tr>
       <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img src="C:image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img src="image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a>
       </td>
       <td class="tablet">
            <strong><a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ">Haiko:</a></strong> Samurai hors pair, mais forgeron avant tout. Le roi des morts vous fera fondre de sa lame
       </td>
       <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img src="C:image/shinken.jpg" alt="Dikembe Mbaka"></a><strong>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img src="image/shinken.jpg" alt="Dikembe Mbaka"></a><strong>
         </td>
       <td class="tablet">
         <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ">Dikembe:</a></strong> Il vient de la lune, il arrête le temps, il ne cesse de se battre que quand il est plongé dans le sang
@@ -26,21 +27,21 @@
     </tr>
     <tr>
       <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img src="C:image/Senshi après la pause.jpg" alt="Senshi Nobue"></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img src="image/Senshi après la pause.jpg" alt="Senshi Nobue"></a>
       </td>
       <td class="tablet">
         <strong><a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU">Senshi:</a></strong> Pour mettre l'ambiance ou le boxon, c'est sur la future déesse Amaterasu qu'il faut compter
       </td>
 
       <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img src="C:image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img src="image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a>
       </td>
       <td class="tablet"><strong><a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym">Kaiyō:</a></strong> Roi dragons des océans, ou simple pêcheur, ce héro au coeur tendre vous attendriras autant que ses Yakuchat
       </td>
     </tr>
   </table>
   <center>
-    <h1><a href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html">Home</a></h1>
+    <h1><a href="index.html">Home</a></h1>
   </center>
 </body>
 
