--- a/Suggestbox.html
+++ b/Suggestbox.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <title>Contact me</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
+  <h1> CE FORMULAIRE NE MARCHE PAS </h1>
   <form class="" action="mailto:ynsungu@gmail.com" method="post">
     <label for="">Ton Nom :</label>
     <input type="text" name="Tonnom" value=""><br>
@@ -35,7 +37,7 @@
     <input type="submit" name="mesquestions" ><br>
   </form>
 <br><br><br>
-  <h1><a href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html">Home</a></h1>
+  <h1><a href="index.html">Home</a></h1>
 </body>
 
 </html>
