--- a/Personnage.html
+++ b/Personnage.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>🏮Personnages🏮</title>
+  <title>Personnages</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <h2><a href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html">Home</a></h2>
+  <h2><a href="index.html">Home</a></h2>
   <strong>🏮Fukashi no seishin (Les étoiles invisibles) 🏮</strong><br>
   <p>Urashima Odoyaka <em>ancien roi du palais du dragon, dragon des pouvoirs, gp de Kaiyo</em> <br>
     Niten - Takezo Shinmen- Miyamoto Musashi<br>
@@ -199,7 +200,7 @@
   <p>Doku<br>
     Jun <em>Nindo</em><br>
     Kendo <em>kendo</em><br></p>
-<h2><a href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html">Home</a></h2>
+<h2><a href="index.html">Home</a></h2>
 </body>
 
 </html>
