update to github2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <img class="banniere" src="https://brookenword.github.io/Kunitsukami/image/bannière2.png" alt="SKB">
+    <img class="banniere" src="image/bannière2.png" alt="SKB">
 <hr size="1" noshade />
   <br>
   <div class="intro">
@@ -24,7 +24,7 @@
     <div class="intro2">
       <table>
         <tr>
-          <td class="figure1" ><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Supaakyoudaibun.html"> <img src="https://brookenword.github.io/Kunitsukami/logo princ.png" alt="logo personnages principaux"> </td>
+          <td class="figure1" ><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Supaakyoudaibun.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo princ.png" alt="logo personnages principaux"> </td>
           <td class="figure2"><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Personnage.html"><img src="https://brookenword.github.io/Kunitsukami/image/logo persos.png" alt="logo personnages"></a></td>
           <td class="figure3"><a href="https://brookenword.github.io/Kunitsukami/Suggestbox.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo conta.png" alt="logo contact"> </a></td>
           <td class="figure4"><a href="https://brookenword.github.io/Kunitsukami/index.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo connex.png" alt="logo connexion"> </a></td>
