update to github 3

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -10,7 +9,7 @@
 
 <body>
 
-    <img class="banniere" src="image/bannière2.png" alt="SKB">
+    <img class="banniere" src="https://brookenword.github.io/Kunitsukami/image/bannière2.png" alt="SKB">
 <hr size="1" noshade />
   <br>
   <div class="intro">
