--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <img class="banniere" src="https://brookenword.github.io/Kunitsukami/image/bannière2.png" alt="SKB">
+    <img class="banniere" src="./image/bannière2.png" alt="SKB">
 <hr size="1" noshade />
   <br>
   <div class="intro">
@@ -154,8 +154,8 @@
     <br>
     <br>
     <div>
-      <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/kitoun ranran.jpg" alt="kitoun ranran">
-      <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
+      <img class="imagerie" src="./image/kitoun ranran.jpg" alt="kitoun ranran">
+      <img class="imagerie" src="./image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
       <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/Family pic.jpg" alt="onmoraki">
     </div>
 
