--- a/Personnage.html
+++ b/Personnage.html
@@ -87,7 +87,7 @@
     Yuugo <em>homme-dragon corail</em><br>
     Urashima<br>
     Kai <em>fiston lumière</em><br>
-    Cebolla Isidro Martin Fierro Canelones de El Pinar lézard <em>cowboy géo-localisation</em><br>
+    Cebolla Isidro Martin Fierro Canelones d'El Pinar <em> lézard cowboy géo-localisation</em><br>
     Ignir <em>fils de ragnar pwr fil de feu</em><br>
     Shinra <em>tête des ténèbres pwr kage bunshin</em><br>
     Fukui <em>lanterne changé poids</em><br>
