--- a/Suggestbox.html
+++ b/Suggestbox.html
@@ -5,7 +5,16 @@
   <meta charset="utf-8">
   <title>Contact me</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -37,7 +46,8 @@
     <input type="submit" name="mesquestions" ><br>
   </form>
 <br><br><br>
-  <h1><a href="index.html">Home</a></h1>
+  <a href="index.html"><img class="icon" src="C:image/homebutton.png" alt="home button"></a>
 </body>
 
 </html>
+
