--- a/Supaakyoudaibun.html
+++ b/Supaakyoudaibun.html
@@ -5,43 +5,54 @@
   <meta charset="utf-8">
   <title>Supaakyoudaibun</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <table  >
     <tr>
-      <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img src="image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a>
+      <td >
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img class="tablett" src="C:image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a>
       </td>
       <td class="tablet">
-           <strong><a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ">Haiko:</a></strong> Samurai hors pair, mais forgeron avant tout. Le roi des morts vous fera fondre de sa lame
+           <strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ">Haiko:</a></strong> Samurai hors pair, mais forgeron avant tout. Le roi des morts vous fera fondre de sa lame
       </td>
-      <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img src="image/shinken.jpg" alt="Dikembe Mbaka"></a><strong>
+      <td >
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img class="tablett" src="C:image/shinken.jpg" alt="Dikembe Mbaka"></a><strong>
         </td>
       <td class="tablet">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ">Dikembe:</a></strong> Il vient de la lune, il arrête le temps, il ne cesse de se battre que quand il est plongé dans le sang
+        <strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ">Dikembe:</a></strong> Il vient de la lune, il arrête le temps, il ne cesse de se battre que quand il est plongé dans le sang
       </td>
 
     </tr>
     <tr>
-      <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img src="image/Senshi après la pause.jpg" alt="Senshi Nobue"></a>
+      <td >
+        <a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img class="tablett" src="C:image/Senshi après la pause.jpg" alt="Senshi Nobue"></a>
       </td>
       <td class="tablet">
-        <strong><a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU">Senshi:</a></strong> Pour mettre l'ambiance ou le boxon, c'est sur la future déesse Amaterasu qu'il faut compter
+        <strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU">Senshi:</a></strong> Pour mettre l'ambiance ou le boxon, c'est sur la future déesse Amaterasu qu'il faut compter
       </td>
 
-      <td class="tablett">
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img src="image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a>
+      <td >
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img class="tablett" src="C:image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a>
       </td>
-      <td class="tablet"><strong><a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym">Kaiyō:</a></strong> Roi dragons des océans, ou simple pêcheur, ce héro au coeur tendre vous attendriras autant que ses Yakuchat
+      <td class="tablet"><strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym">Kaiyō:</a></strong> Roi dragons des océans, ou simple pêcheur, ce héro au coeur tendre vous attendriras autant que ses Yakuchat
       </td>
     </tr>
   </table>
+  <br><br><br>
   <center>
-    <h1><a href="index.html">Home</a></h1>
+
+  <a href="index.html"><img class="icon" src="image/homebutton.png" alt="home button"></a>
   </center>
 </body>
 
