--- a/Personnage.html
+++ b/Personnage.html
@@ -3,14 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Personnages</title>
+  <title>🏮Personnages🏮</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h2><a href="index.html">Home</a></h2>
-  <strong>🏮Fukashi no seishin (Les étoiles invisibles) 🏮</strong><br>
+<a href="index.html"><img class="icon" src="image/homebutton.png" alt="home button"></a><br>
+  <strong>Fukashi no seishin (Les étoiles invisibles) </strong><br>
   <p>Urashima Odoyaka <em>ancien roi du palais du dragon, dragon des pouvoirs, gp de Kaiyo</em> <br>
     Niten - Takezo Shinmen- Miyamoto Musashi<br>
     Some - Nova<br>
@@ -42,7 +51,9 @@
 
 
   <strong>Tablettes</strong><br>
-  <p>Yakuchat Maguro, Aji, Katsuo, Tara et leur chef Toru <em> (Kaiyo)</em><br>
+  <p>Yakuchat <br>
+    Maguro, Aji, Katsuo,<br>
+    Tara et leur chef Toru <em> (Kaiyo)</em><br>
     ☠ Oort <em>dandy nuage (Senshi)</em> ☠<br>
     ☠ Piko Piko <em>flamme vivante (Asha)</em> ☠<br>
     Yaken <em>chien (Haiko)</em><br>
@@ -66,7 +77,7 @@
     Sumi <em>femme de Haïko</em><br>
     Deux bébés Hattori ☠Shiro☠ et kuro</p>
 
-  <strong>Kitoun Ranran (Nuage supersonique explosif</strong><br>
+  <strong>Kitoun Ranran (Nuage supersonique explosif)</strong><br>
   <p>Kento Senshi Nobue<br>
     Zankou <em>ex-clodo</em><br>
     Neko <em>petite fille psycho</em><br>
@@ -87,7 +98,10 @@
     Yuugo <em>homme-dragon corail</em><br>
     Urashima<br>
     Kai <em>fiston lumière</em><br>
-    Cebolla Isidro Martin Fierro Canelones d'El Pinar <em> lézard cowboy géo-localisation</em><br>
+    Cebolla Isidro <br>
+    Martin Fierro <br>
+    Canelones <br>
+    d'El Pinar <em> lézard cowboy géo-localisation</em><br>
     Ignir <em>fils de ragnar pwr fil de feu</em><br>
     Shinra <em>tête des ténèbres pwr kage bunshin</em><br>
     Fukui <em>lanterne changé poids</em><br>
@@ -200,7 +214,7 @@
   <p>Doku<br>
     Jun <em>Nindo</em><br>
     Kendo <em>kendo</em><br></p>
-<h2><a href="index.html">Home</a></h2>
+<a href="index.html"><img class="icon" src="image/homebutton.png" alt="home button"></a>
 </body>
 
 </html>
