--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -5,141 +6,46 @@
   <title> Kunitsukami </title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <img class="banniere" src="https://raw.githubusercontent.com/BrookEnword/Kunitsukami/main/image/Banni%C3%A8re2.png" alt="SKB">
+    <img class="banniere" src="image/bannière2.png" alt="SKB">
 <hr size="1" noshade />
-  <br>
-  <div class="intro">
-    <p>Dans Kunitsukami, venez découper Yokai, héros de légende et autres adversaires redoutables. <br>
-      À travers des lieux époustouflants et variés, retrouvez les Supaakyoudaibun: Haiko, Kaiyō, Senshi et Dikembe, dans leurs aventures épiques et farfelues.<br>
-      Libérerez-vous la puissance des Kamis ? Serez vous la victime des terrifiants WORLD EATER ? vous laisserez-vous tenter par le ciel coupé ?<br>
-      Découvrez-le dans les plaines célestes de Kunitsukami !</p>
-  </div>
-  <hr size="3" noshade />
-  <center>
+
     <div class="intro2">
-      <table>
-        <tr>
-          <td class="figure1" ><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Supaakyoudaibun.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo princ.png" alt="logo personnages principaux"> </td>
-          <td class="figure2"><a target="_blank" href="https://brookenword.github.io/Kunitsukami/Personnage.html"><img src="https://brookenword.github.io/Kunitsukami/image/logo persos.png" alt="logo personnages"></a></td>
-          <td class="figure3"><a href="https://brookenword.github.io/Kunitsukami/Suggestbox.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo conta.png" alt="logo contact"> </a></td>
-          <td class="figure4"><a href="https://brookenword.github.io/Kunitsukami/index.html"> <img src="https://brookenword.github.io/Kunitsukami/image/logo connex.png" alt="logo connexion"> </a></td>
-        </tr>
-      </table>
+
+        <a class="link2" target="_blank" href="Supaakyoudaibun.html"> <img class="link1" src="image/logo princ.png" alt="logo personnages principaux"> </td>
+        <a class="link2" target="_blank" href="Personnage.html"><img class="link1" src="image/logo persos.png" alt="logo personnages"></td>
+        <a class="link2" target="_blank" href="monogatari.html"><img class="link1" src="image/logo mono.png" alt="logo monogatari"></a>
+        <a class="link2" target="_blank" href="index.html"> <img class="link1" src="image/logo connex.png" alt="logo connexion"> </td></a>
+        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/10ZuQhnsCbMIvLSy6M_O2ErF5hLfy9Ftp"><img class="link1" src="image/logo musique.png" alt="logo musiques"></a>
+        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/10aDAzX1KSG4Y2TzA76tLsjT88O1j6uyk"><img class="link1" src="image/logo dessins.png" alt="logo dessins"></a>
+        <a class="link2" target="_blank" href="Suggestbox.html"> <img class="link1" src="image/logo conta.png" alt="logo contact"></td>
+        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/1xpnWr1MVZmEUSHs4y71LjbAY3zOa6f8T"><img class="link1" src="image/logo cartes.png" alt="logo cartes"></a>
+
+
+
+
+    </div>
+  <hr size="1" noshade />
+    <br>
+    <div class="intro">
+      <p class="definition">Dans Kunitsukami, venez découper Yokai, héros de légende et autres adversaires redoutables. <br>
+        À travers des lieux époustouflants et variés, retrouvez les Supaakyoudaibun: Haiko, Kaiyō, Senshi et Dikembe, dans leurs aventures épiques et farfelues.<br>
+        Libérerez-vous la puissance des Kamis ? Serez vous la victime des terrifiants WORLD EATER ? vous laisserez-vous tenter par le ciel coupé ?<br>
+        Découvrez-le dans les plaines célestes de Kunitsukami !</p>
     </div>
 
-    <br>
-
-
-    <br>
-    <br>
-    <hr size="1" noshade />
-    <div class="intro3">
-        <h3>Personnages importants</h3>
-        <table cellspacing="10">
-          <tr>
-            <td>
-              <table>
-                <tr>
-                  <td>Miyamoto Musashi</td>
-                  <td>★★★★★</td>
-                </tr>
-                <tr>
-                  <td>Bokuden Tsukehara</td>
-                  <td>★★★★★</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Soma Kumamoto</td>
-                  <td>★★★★✰</td>
-                </tr>
-                <tr>
-                  <td>Gontrand</td>
-                  <td>★★★★✰</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Toshi Toshi Nobue</td>
-                  <td>★★★★✰</td>
-                </tr>
-                <tr>
-                  <td>Urashima Odayaka</td>
-                  <td>★★★★★</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Atsu Ijuu</td>
-                  <td>★★✰✰✰</td>
-                </tr>
-                <tr>
-                  <td>Taro</td>
-                  <td>★★★★✰</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Kenshi</td>
-                  <td>★★★★★</td>
-                </tr>
-                <tr>
-                  <td>Kensuke </td>
-                  <td>★★★★★</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Kai Odayaka</td>
-                  <td>★★★★✰</td>
-                </tr>
-                <tr>
-                  <td>Doku</td>
-                  <td>★★★★✰</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Hideshi Nobue</td>
-                  <td>★★★★✰</td>
-                </tr>
-                <tr>
-                  <td>Kendo</td>
-                  <td>★★★★★</td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>Umi Odayaka</td>
-                  <td>★★✰✰✰</td>
-                </tr>
-                <tr>
-                  <td>Golo</td>
-                  <td>★★★★✰</td>
-                </tr>
-              </table>
-            </td>
-          
-        </table>
-    </div>
 
 
 
@@ -154,12 +60,12 @@
     <br>
     <br>
     <div>
-      <img class="imagerie" src="https://raw.githubusercontent.com/BrookEnword/Kunitsukami/main/image/Kitoun%20Ranran.jpg" alt="kitoun ranran">
-      <img class="imagerie" src="https://raw.githubusercontent.com/BrookEnword/Kunitsukami/main/image/Kousei%20no%20Kumo%20no%20Shinrin.jpg" alt="kousei no kumo no shinrin">
-      <img class="imagerie" src="https://brookenword.github.io/Kunitsukami/image/Family pic.jpg" alt="onmoraki">
+      <img class="imagerie" src="image/kitoun ranran.jpg" alt="kitoun ranran">
+      <img class="imagerie" src="image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
+      <img class="imagerie" src="image/Family pic.jpg" alt="onmoraki">
     </div>
 
-      <a href="https://brookenword.github.io/Kunitsukami/Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
+      <a class="link0" href="Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
 </body>
 
 </html>
