--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 <body>
 
-    <img class="banniere" src="image/bannière2.png" alt="SKB">
+    <img class="banniere" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Banni%C3%A8re2.png" alt="SKB">
 <hr size="1" noshade />
 
     <div class="intro2">
 
-        <a class="link2" target="_blank" href="Supaakyoudaibun.html"> <img class="link1" src="image/logo princ.png" alt="logo personnages principaux"> </td>
-        <a class="link2" target="_blank" href="Personnage.html"><img class="link1" src="image/logo persos.png" alt="logo personnages"></td>
-        <a class="link2" target="_blank" href="monogatari.html"><img class="link1" src="image/logo mono.png" alt="logo monogatari"></a>
-        <a class="link2" target="_blank" href="index.html"> <img class="link1" src="image/logo connex.png" alt="logo connexion"> </td></a>
-        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/10ZuQhnsCbMIvLSy6M_O2ErF5hLfy9Ftp"><img class="link1" src="image/logo musique.png" alt="logo musiques"></a>
-        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/10aDAzX1KSG4Y2TzA76tLsjT88O1j6uyk"><img class="link1" src="image/logo dessins.png" alt="logo dessins"></a>
-        <a class="link2" target="_blank" href="Suggestbox.html"> <img class="link1" src="image/logo conta.png" alt="logo contact"></td>
-        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/1xpnWr1MVZmEUSHs4y71LjbAY3zOa6f8T"><img class="link1" src="image/logo cartes.png" alt="logo cartes"></a>
+        <a class="link2" target="_blank" href="Supaakyoudaibun.html"> <img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20princ.png" alt="logo personnages principaux"> </td>
+        <a class="link2" target="_blank" href="Personnage.html"><img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20persos.png" alt="logo personnages"></td>
+        <a class="link2" target="_blank" href="monogatari.html"><img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20mono.png" alt="logo monogatari"></a>
+        <a class="link2" target="_blank" href="index.html"> <img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20connex.png" alt="logo connexion"> </td></a>
+        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/10ZuQhnsCbMIvLSy6M_O2ErF5hLfy9Ftp"><img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20musique.png" alt="logo musiques"></a>
+        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/10aDAzX1KSG4Y2TzA76tLsjT88O1j6uyk"><img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20dessins.png" alt="logo dessins"></a>
+        <a class="link2" target="_blank" href="Suggestbox.html"> <img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20conta.png" alt="logo contact"></td>
+        <a class="link2" target="_blank" href="https://drive.google.com/drive/folders/1xpnWr1MVZmEUSHs4y71LjbAY3zOa6f8T"><img class="link1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/logo%20cartes.png" alt="logo cartes"></a>
 
 
 
@@ -60,9 +60,9 @@
     <br>
     <br>
     <div>
-      <img class="imagerie" src="image/kitoun ranran.jpg" alt="kitoun ranran">
-      <img class="imagerie" src="image/kousei no kumo no shinrin.jpg" alt="kousei no kumo no shinrin">
-      <img class="imagerie" src="image/Family pic.jpg" alt="onmoraki">
+      <img class="imagerie" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Kitoun%20Ranran.jpg" alt="kitoun ranran">
+      <img class="imagerie" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Kousei%20no%20Kumo%20no%20Shinrin.jpg" alt="kousei no kumo no shinrin">
+      <img class="imagerie" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Family%20pic.jpg" alt="onmoraki">
     </div>
 
       <a class="link0" href="Suggestbox.html">Contactez-moi pour ajouter des infos !</a>
