--- a/Supaakyoudaibun.html
+++ b/Supaakyoudaibun.html
@@ -21,13 +21,13 @@
   <table  >
     <tr>
       <td >
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img class="tablett" src="C:image/Haiko senshikiller.jpg" alt="Haiko Hattori"></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ"><img class="tablett" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Haiko%20senshikiller.jpg" alt="Haiko Hattori"></a>
       </td>
       <td class="tablet">
            <strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1yTcmLZRSmexVgT6xI8GcyKDfSQdNZLGJ">Haiko:</a></strong> Samurai hors pair, mais forgeron avant tout. Le roi des morts vous fera fondre de sa lame
       </td>
       <td >
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img class="tablett" src="C:image/shinken.jpg" alt="Dikembe Mbaka"></a><strong>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ"><img class="tablett" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/shinken.jpg" alt="Dikembe Mbaka"></a><strong>
         </td>
       <td class="tablet">
         <strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1yRm8sLowB3pyNQvXeq8MpbJYEbHyRBtQ">Dikembe:</a></strong> Il vient de la lune, il arrête le temps, il ne cesse de se battre que quand il est plongé dans le sang
@@ -36,14 +36,14 @@
     </tr>
     <tr>
       <td >
-        <a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img class="tablett" src="C:image/Senshi après la pause.jpg" alt="Senshi Nobue"></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU"><img class="tablett" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Senshi%20apr%C3%A8s%20la%20pause.jpg" alt="Senshi Nobue"></a>
       </td>
       <td class="tablet">
         <strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1y3xwVw7ZraD0D_AG0tRMk2RK8RBbhrOU">Senshi:</a></strong> Pour mettre l'ambiance ou le boxon, c'est sur la future déesse Amaterasu qu'il faut compter
       </td>
 
       <td >
-        <a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img class="tablett" src="C:image/Kaiyō training.jpg" alt="Kaiyō Odayaka"></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym"><img class="tablett" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Kaiy%C5%8D%20training.jpg" alt="Kaiyō Odayaka"></a>
       </td>
       <td class="tablet"><strong><a class="skb" target="_blank" href="https://drive.google.com/drive/folders/1yGGEbYOQx1XTGZwf7TnES3XeN2CvSrym">Kaiyō:</a></strong> Roi dragons des océans, ou simple pêcheur, ce héro au coeur tendre vous attendriras autant que ses Yakuchat
       </td>
@@ -52,7 +52,7 @@
   <br><br><br>
   <center>
 
-  <a href="index.html"><img class="icon" src="image/homebutton.png" alt="home button"></a>
+  <a href="index.html"><img class="icon" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Homebutton.png" alt="home button"></a>
   </center>
 </body>
 
