--- a/monogatari.html
+++ b/monogatari.html
@@ -19,7 +19,7 @@
 
 <body>
   <h1 class="titre">Kunitsukami no monogatari</h1>
-  <img class="fond" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/fondmono.png" alt="Soma et Tsukehara">
+  <img class="fond" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/fondmono.png?raw=true" alt="Soma et Tsukehara">
   <div class="legends">
     <a class="monoscr" href="https://drive.google.com/drive/folders/1wGVCtqGXL4yk8ajoWFINWp4kwhno0Ee4">Contes et légendes</a>
   </div>
