--- a/monogatari.html
+++ b/monogatari.html
@@ -19,7 +19,7 @@
 
 <body>
   <h1 class="titre">Kunitsukami no monogatari</h1>
-  <img class="fond" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/fondmono.png?raw=true" alt="Soma et Tsukehara">
+  <img class="fond" src="https://brookenword.github.io/Kunitsukami/image/fondmono.png" alt="Soma et Tsukehara">
   <div class="legends">
     <a class="monoscr" href="https://drive.google.com/drive/folders/1wGVCtqGXL4yk8ajoWFINWp4kwhno0Ee4">Contes et légendes</a>
   </div>
@@ -50,7 +50,7 @@
     <a class="monoscr" href="https://drive.google.com/drive/folders/1EajT0fUQA3PV6pOXH8n-_E9kfA7cUXwG">Episode 9</a>
   </div>
 <center>
-<a  href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html"><img class="icon1" src="https://github.com/BrookEnword/Kunitsukami/blob/main/image/Homebutton.png" alt="home button"></a>
+<a  href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html"><img class="icon1" src="https://brookenword.github.io/Kunitsukami/image/Homebutton.png" alt="home button"></a>
 </center>
 
 </body>
