--- a/monogatari.html
+++ b/monogatari.html
@@ -50,7 +50,7 @@
     <a class="monoscr" href="https://drive.google.com/drive/folders/1EajT0fUQA3PV6pOXH8n-_E9kfA7cUXwG">Episode 9</a>
   </div>
 <center>
-<a  href="file:///C:/Users/ynsun/OneDrive/Bureau/Web%20dev/Html%20personal%20site/index.html"><img class="icon1" src="https://brookenword.github.io/Kunitsukami/image/Homebutton.png" alt="home button"></a>
+<a  href="index.html"><img class="icon1" src="https://brookenword.github.io/Kunitsukami/image/Homebutton.png" alt="home button"></a>
 </center>
 
 </body>
